about section mostly done

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@ layout: default
 title: Wang Zhujing
 ---
 {% include header.html %}
+{% include section_about.html %}
 
 
 <script src="/assets/js/jquery-1.11.0.min.js"></script>
 <script src="/assets/js/sticky-header.js"></script>
-<script src="/assets/js/jquery.pinBox.js"></script>
-<!-- <script src="/assets/js/jquery.js"></script> -->
 <script type="text/javascript" src="/assets/js/functions.js"></script>
