--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Wang Zhujing
 ---
 {% include header.html %}
 {% include section_about.html %}
+{% include section_blog.html %}
 
 
 <script src="/assets/js/jquery-1.11.0.min.js"></script>
