set up first 3 sections

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Wang Zhujing
 ---
 {% include header.html %}
+{% include section_home.html %}
 {% include section_about.html %}
 {% include section_blog.html %}
 
