--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ title: Wang Zhujing
 {% include section_home.html %}
 {% include section_about.html %}
 {% include section_blog.html %}
+{% include section_resume.html%}
 
 
 <script src="/assets/js/jquery-1.11.0.min.js"></script>
